Fixed issues with Placeholder (not shown when changing text (not when losing focus)). Fixed problems with sending more than one file. The mechanism of sending messages has been changed: instead of accessing via win32, the WinForms mechanism is now used: 1) Stability has increased 2) The maximum speed of sending messages has increased from 200ms to 0ms)

--- a/SpamBotRemaster/Infrastructure/Dictionaries/ResourseDictionaries/MainResourses.xaml
+++ b/SpamBotRemaster/Infrastructure/Dictionaries/ResourseDictionaries/MainResourses.xaml
@@ -68,7 +68,7 @@
                                     BorderThickness="{TemplateBinding BorderThickness}"
                                     CornerRadius="3">
 
-                            <Grid>
+                            <Grid HorizontalAlignment="Stretch">
                                 <TextBlock Text="{TemplateBinding PlaceholderText}"
                                                Visibility="{TemplateBinding PlaceholderVisibility}"
                                                TextWrapping="{TemplateBinding TextWrapping}"
@@ -78,7 +78,7 @@
                                                HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                                Background="Transparent"
                                                Padding="5"/>
-                                <TextBox Text="{Binding Text, RelativeSource={RelativeSource TemplatedParent}}"
+                                <TextBox Text="{Binding Text, RelativeSource={RelativeSource TemplatedParent}, UpdateSourceTrigger=PropertyChanged}"
                                              CaretBrush="{TemplateBinding CaretBrush}"
                                              TextWrapping="{TemplateBinding TextWrapping}"
                                              Foreground="{TemplateBinding TextColor}"
